FreeBSD arm64 missing closing ) at mozglue/baseprofiler/core/platform-linux-android.cpp#l125
Categories
(Core :: Gecko Profiler, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox120 | --- | wontfix |
firefox121 | --- | fixed |
firefox122 | --- | fixed |
People
(Reporter: jsm, Assigned: yury)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
User Agent: Mozilla/5.0 (X11; FreeBSD amd64; rv:109.0) Gecko/20100101 Firefox/119.0
Steps to reproduce:
Building firefox on FreeBSD arm64
Actual results:
compile time error
mozglue/baseprofiler/core/platform-linux-android.cpp#l125 (missing closing ")" )
Expected results:
compile success
Comment 2•1 year ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::mozglue' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Comment 3•1 year ago
|
||
The severity field is not set for this bug.
:glandium, could you have a look please?
For more information, please visit BugBot documentation.
Updated•1 year ago
|
Updated•1 year ago
|
Comment 4•1 year ago
|
||
:yury, since you are the author of the regressor, bug 1846534, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
Assignee | ||
Comment 5•1 year ago
|
||
Updated•1 year ago
|
Assignee | ||
Comment 6•1 year ago
|
||
I can create a patch. Is there a way to verify it on try?
Comment 7•1 year ago
|
||
Set release status flags based on info from the regressing bug 1846534
Updated•1 year ago
|
Comment 9•1 year ago
|
||
bugherder |
Comment 10•1 year ago
|
||
The patch landed in nightly and beta is affected.
:yury, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox121
towontfix
.
For more information, please visit BugBot documentation.
Assignee | ||
Comment 11•1 year ago
|
||
Comment on attachment 9367471 [details]
Bug 1865953: Fix FreeBSD arm64 missing closing parentheses. r?jpages
Beta/Release Uplift Approval Request
- User impact if declined: Cannot build FF 121 on FreeBSD
- Is this code covered by automated tests?: Unknown
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): No affects anything we build.
- String changes made/needed:
- Is Android affected?: No
Comment 12•11 months ago
|
||
Comment on attachment 9367471 [details]
Bug 1865953: Fix FreeBSD arm64 missing closing parentheses. r?jpages
Approved for 121.0rc1.
Comment 13•11 months ago
|
||
uplift |
Updated•11 months ago
|
Description
•