Bug 1865953: Fix FreeBSD arm64 missing closing parentheses. r=jpages,profiler-reviewers,florian a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D195784